tdf#105454: Stop ignoring font kerning setting

Make sure the default is for kerning to be enable, and honor the setting
to disable it.

Change-Id: Icf6bb75e71cae43868fba323ca3c61e4a3e81523